fixed spacing and sizing for satisfaction

--- a/CMS/static/scss/global.scss
+++ b/CMS/static/scss/global.scss
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  font-family: sans-serif, serif;
+  font-family: 'Nunito Sans', sans-serif;
   color: #5F607C;
 }
 
