--- a/courses/static/scss/course_detail.scss
+++ b/courses/static/scss/course_detail.scss
@@ -430,7 +430,7 @@
     .course-detail {
         .course-detail__headline_statistics {
             .course-detail__headline_stat {
-                height: 24vh;
+                height: 25vh;
                 width:31%;
             }
         }
